# PomoKan

backend/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  todosapp.db
backend/alembic/: env.py
backend/src/: api.py  exceptions.py  logging.py  main.py
backend/src/auth/: controller.py  models.py  service.py
backend/src/database/: core.py
backend/src/entities/: todo.py  user.py
backend/src/todos/: controller.py  models.py  service.py
backend/src/users/: controller.py  models.py  service.py
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/audio/: AUDIO_FILES_README.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: axios.ts  todoApi.ts  userApi.ts
frontend/src/components/: Layout.tsx  NavBar.tsx  Pomo.tsx  Pomodoro.tsx  RequireAuth.tsx  SignInSignUpCard.tsx  TaskCard.tsx  TimerModePopover.tsx
frontend/src/components/eisenhowermatrix/: EisenhoverMatrix.tsx  MatrixCard.tsx  Quadrant.tsx  TaskCardMatrix.tsx
frontend/src/components/kanban/: Kanban.tsx  KanbanBurnBarrel.tsx  KanbanCard.tsx  KanbanColumn.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: Dash.tsx  DashboardPage.tsx  EisenhoverMatrixPage.tsx  HeroPage.tsx  KanbanPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PomodoroPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SettingsPage.tsx  TodosPage.tsx
frontend/src/store/: pomodoroStore.ts  settingsStore.ts  todosStore.ts
frontend/src/utils/: data-tasks.ts  type-kanban.ts  type-matrix.ts  type-todo.ts  type-user.ts
(+17 files in other folders)
