[project]
name = "backend"
version = "0.1.0"
description = "Backend for PomoKan Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.3",
    "bcrypt==4.0.1",
    "black>=25.1.0",
    "email-validator>=2.2.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "ruff>=0.12.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
